--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
     <noscript>
       not working in browse
     </noscript>
-    <!-- <script type="module" src="./js/main.js"></script> -->
-    <script type="module" src="./ts/main.ts"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
