--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Webapp</title>
   </head>
   <body>
     <div id="app"></div>
     <noscript>
-      not working in browse
+      not working in your browse
     </noscript>
     <script type="module" src="./js/main.js"></script>
   </body>
